--- a/assets/geral.css
+++ b/assets/geral.css
@@ -1,4 +1,4 @@
 body {
-    background-color: rgb(44, 133, 113);
+    background-color: #8a817c;
     font-family: 'Open Sans',Arial,sans-serif;
     }
