--- a/assets/conteudo_principal.css
+++ b/assets/conteudo_principal.css
@@ -1,6 +1,6 @@
 .conteudo_principal {
-	margin-top: 1.5rem;
-	margin-bottom: 1.5rem;	
+	margin-top: 2rem;
+	margin-bottom:3.5rem;	
 	}
 
 .conteudo_principal-subtitulo {
@@ -12,18 +12,18 @@
 
 .conteudo_principal-cursos--link {
 	height: 6rem;
-	background-color: #0a0a0a;
+	background-color: #ccc5b9;
 	text-align: center;
 	margin: 0.5rem;
 	padding:0.5rem;
 	transition: .5s;
-	box-shadow: 3px 3px 3px #ac2a2a;
+	box-shadow: 3px 3px 3px #333533;
 	position: relative;
 	}
 
 .conteudo_principal-cursos--link a {
 	text-decoration: none;
-	color: #cfc6c6;
+	color: #000000;
 	font-weight: bold;
 	display: block;
 	width: 100%;
@@ -34,8 +34,8 @@
 	}
 
 .conteudo_principal-cursos--link:hover {
-	box-shadow: 6px 6px 6px #1829c0;
-	scale: 1.06;
+	box-shadow: 6px 6px 6px aqua;
+	scale: 1.05;
 	}
 
 .conteudo_principal-cursos--link a:before {
@@ -58,8 +58,9 @@
 
 @media (max-width: 768px) {
 	.conteudo_principal-cursos--link {
-	margin:none;
-	padding: 0.5rem;
-
+	margin: 0.3rem;
+	padding: .5rem;
+	
+	
 	}
 	}
