--- a/assets/menu.css
+++ b/assets/menu.css
@@ -1,11 +1,14 @@
 .container {
 	width: 100%;
-	margin: 0 ;
+	margin: 0;
 }
 
 .menu_principal {
-	background-color: rgb(66, 56, 85);
+	background-color: #252422;
 	padding: none;
+	
+	
+
 }
 
 .menu_principal-nav {
@@ -14,19 +17,18 @@
 }
 
 .menu_principal-nav-link {
-	padding:  1rem 5.2rem;
+	padding:  1rem 1.2rem;
 	margin-bottom: 5px ;
 	color: #dedbe0;
-	background-color: rgb(66, 56, 85);
+	background-color: #252422;
 	text-decoration: none;
 	transition: .5s;
-    border-radius: 2px;
     font-size: 1rem;	
 }
 
 .menu_principal-nav-link:hover {
 	color:aqua;
-	background-color:rgb(66, 56, 85);
+	background-color:#252422;
 	scale: 1.06;
 	border-radius:0.5rem;
 	}
@@ -35,5 +37,11 @@
 	.menu_principal-nav {
 	flex-direction:column;
 	align-items: center;
+	margin: 0;
+	padding: 0;
 	}
+
+	
+		
+	
 	}
